<resources>
    <string name="app_name">Covid Cert Storage</string>
    <string name="menue">Menü</string>
    <string name="btnQrcodeToClipboard">Scan QR-code</string>
    <string name="btnShowlicenseinformation">zeige Lizenz Infos</string>
    <string name="btnAboutapp">über diese App</string>
    <string name="action_licenses">Verwendete Bibliotheken und Lizenzen</string>
    <string name="action_settings">Settings</string>
    <string name="titleCertificateDetail">Inhalt des QR-codes</string>
    <string name="zeigeqrcode">zeige QR-Code</string>
     <string name="credits"><a href="https://creativecommons.org/licenses/by/4.0/deed.de">https://creativecommons.org/licenses/by/4.0/deed.de</a></string>
    <string name="appVersion">Version</string>
    <string name="appVersionData">1.0.1</string>
    <string name="titleAbout">Über diese App</string>
    <string name="programmer">Michael Fehr</string>
    <string name="projectPage"><a href="http://androidcrypto.bplaced.net/android/qrcode.html">http://java-crypto.bplaced.net/android/impfzertifikat.html</a></string>
    <string name="infoProjectPage">Projektseite</string>
    <string name="programmername">Programmierer</string>
    <string name="appiconname">App Icon</string>
    <string name="infoSourceCodePage">Source Code</string>
    <string name="sourceCodePage"><a href="https://github.com/java-crypto/android/impfzertifikat/">https://github.com/java-crypto/android/impfzertifikat</a></string>
    <string name="picture_appicon">generated by</string>
    <string name="copyright_appicon">(C) by Google Fonts</string>
    <string name="license_appicon">Lizenztext</string>
    <string name="nodata">keine Daten</string>
    <string name="appPurpose">Übersicht</string>
    <string name="appPurposeText">Die App liest den QR-Code eines Impf-, Genesungs- oder Testzertifikates ein und zeigt den Inhalt in einem Fenster an.</string>
    <string name="btnQrcodeFromFile">show QR-Code</string>
</resources>