<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:shrinkColumns="1"
            android:stretchColumns="*">

            <TableRow
                android:layout_height="46dp"
                android:padding="5dip">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_span="2"
                    android:gravity="center_horizontal"
                    android:text="@string/titleAbout"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/appiconname"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal|center_vertical"
                    app:srcCompat="@drawable/outline_qr_code_scanner_black_48" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/credittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/picture_appicon"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/copyright_appicon"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
            </TableRow>

            <TableRow android:layout_height="10dp"></TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="20dp"
                    android:text="@string/programmername"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/namefirst"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/programmer"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/appVersion"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/appVersion"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/nodata"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/infoProjectPage"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/projectpage"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/projectPage"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/infoSourceCodePage"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sourcecodepage"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sourceCodePage"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/appPurpose"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/appPurpose"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/appPurposeText"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
